change app name and add title

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
     <head>
+    <title>Transliterater</title>
         <link rel="stylesheet" href="styles/styles.css" media="screen" title="no title" charset="utf-8">
     </head>
     <body>
       <header>
-        <h1>Transliterator</h1>
+        <h1>Transliterater</h1>
       </header>
 
       <main>
