--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
           <div class="select-style">
             <select id="optScript">
               <option value="select" selected="selected">Select</option>
-              <option value="devanagari">Devanagari</option>
+              <option value="devanagariUC">Devanagari</option>
               <option value="tamil">Tamil</option>
+              <option value="iast">IAST</option>
             </select>
           </div>
         </div>
@@ -31,7 +32,7 @@
 
         <section id="translitMap" class="translitMap">
         </section>
-        
+
       </main>
 
 
