--- a/TranslitBox/index.html
+++ b/TranslitBox/index.html
@@ -1,15 +1,16 @@
 <html>
     <head>
-    <title>Transliterater</title>
-        <link rel="stylesheet" href="styles/styles.css" media="screen" title="no title" charset="utf-8">
+    <title>TranslitBox</title>
+        <link rel="stylesheet" href="../commons/styles/styles.css" media="screen" title="no title" charset="utf-8">
     </head>
     <body>
       <header>
-        <h1>Transliterater</h1>
+        <h1>Transliterater :: TranslitBox</h1>
       </header>
 
       <main>
         <section class="controllers">
+        <nav class="toolBar"></nav>
         <nav class="toolBar">
           <div class="tool optScript">
           <label for="optScript">Output Script</label>
@@ -36,7 +37,8 @@
       </main>
 
 
-      <script src="scripts/sanscript.js"></script>
+      <script src="../commons/scripts/sanscript.js"></script>
+      <script src="../commons/scripts/translit-map.js"></script>
       <script src="scripts/script.js"></script>
     </body>
 </html>
