use Unicode for tamil chars

--- a/TranslitBox/index.html
+++ b/TranslitBox/index.html
@@ -17,7 +17,7 @@
           <div class="select-style">
             <select id="optScript">
               <option value="select" selected="selected">Select</option>
-              <option value="devanagariUC">Devanagari</option>
+              <option value="devanagari">Devanagari</option>
               <option value="tamil">Tamil</option>
               <option value="iast">IAST</option>
             </select>
