--- a/TranslitPad/index.html
+++ b/TranslitPad/index.html
@@ -28,7 +28,7 @@
         <div class="tool optScript">
           <form name="scriptSelector" id="optScriptGroup">
             <label for="devanagari">Devanagari</label>
-            <input type="radio" name="script" id="devanagari" value="devanagariUC" checked="true" accesskey="z">
+            <input type="radio" name="script" id="devanagari" value="devanagari" checked="true" accesskey="z">
 
             <label for="tamil">Tamil</label>
             <input type="radio" name="script" id="tamil" value="tamil" accesskey="x">
