--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   <meta charset="utf-8">
   <title>Transliterater</title>
   <link rel="stylesheet" href="commons/styles/home.css" media="screen" charset="utf-8">
-
-  <base href="#" target="_blank" />
 </head>
 
 <body>
@@ -14,7 +12,7 @@
   <h1>Transliterater</h1>
 
   <div class="menucontainer">
-    <a href="TranslitBox/index.html">
+    <a id="translitbox" href="TranslitBox/index.html">
       <div class="menu">
         <img src="commons/rsrcs/TranslitBox.png" alt="TranslitBox" />
         <center>
@@ -23,7 +21,7 @@
       </div>
     </a>
 
-    <a href="TranslitPad/index.html">
+    <a id="translitpad" href="TranslitPad/index.html">
       <div class="menu">
         <img src="commons/rsrcs/TranslitPad.png" alt="TranslitPad" />
         <center>
@@ -32,6 +30,7 @@
       </div>
     </a>
   </div>
+  <script src="../commons/scripts/home.js"></script>
 </body>
 
 </html>
