open New Chrome App window for links only if it is Chrome App

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
     </a>
   </div>
-  <script src="../commons/scripts/home.js"></script>
+  <script src="commons/scripts/home.js"></script>
 </body>
 
 </html>
