move home.js to root
rename home.js to index.js
since only chrome requires it

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
     </a>
   </div>
-  <script src="commons/scripts/home.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
