--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Transliterater</title>
+  <title>muTranslit</title>
   <link rel="stylesheet" href="commons/styles/home.css" media="screen" charset="utf-8">
+
+  <base href="#" target="_blank" />
 </head>
 
 <body>
 
-  <h1>Transliterater</h1>
+  <h1>muTranslit</h1>
 
   <div class="menucontainer">
     <a id="translitbox" href="TranslitBox/index.html">
@@ -30,7 +32,6 @@
       </div>
     </a>
   </div>
-  <script src="index.js"></script>
 </body>
 
 </html>
