--- a/TranslitBox/index.html
+++ b/TranslitBox/index.html
@@ -1,7 +1,9 @@
+<!Doctype html>
 <html>
     <head>
-    <title>TranslitBox</title>
-        <link rel="stylesheet" href="../commons/styles/styles.css" media="screen" title="no title" charset="utf-8">
+        <meta charset="utf-8">
+        <title>TranslitBox</title>
+        <link rel="stylesheet" href="../commons/styles/styles.css" media="screen" charset="utf-8">
     </head>
     <body>
       <header>
