add `utf-8` meta tag.

--- a/TranslitPad/index.html
+++ b/TranslitPad/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <meta charset="utf-8">
   <title>TranslitPad</title>
   <link rel="stylesheet" href="../commons/styles/styles.css" charset="utf-8">
   <link rel="stylesheet" href="../commons/styles/fonts.css" charset="utf-8">
@@ -48,7 +49,7 @@
 
 
   <script src="../commons/scripts/sanscript.js" charset="utf-8"></script>
-  <script src="../commons/scripts/translit-map.js"></script>
+  <script src="../commons/scripts/translit-map.js" charset="utf-8"></script>
   <script src="scripts/script.js" charset="utf-8"></script>
 </body>
 
