--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>muTranslit</title>
-  <link rel="stylesheet" href="commons/styles/home.css" media="screen" charset="utf-8">
 
-  <base href="#" target="_blank" />
+  <link rel="stylesheet" href="commons/styles/home.css" media="screen">
 </head>
 
 <body>
-
   <h1>muTranslit</h1>
 
   <div class="menucontainer">
