TranslitBox: make default option as "devanagari".

--- a/TranslitBox/index.html
+++ b/TranslitBox/index.html
@@ -23,8 +23,7 @@
           <label for="optScript">Output Script</label>
           <div class="select-style">
             <select id="optScript">
-          <option value="select" selected="selected">Select</option>
-          <option value="devanagari">Devanagari</option>
+          <option value="devanagari" selected>Devanagari</option>
           <option value="tamil">Tamil</option>
           <option value="iast">IAST</option>
         </select>
