--- a/TranslitBox/index.html
+++ b/TranslitBox/index.html
@@ -23,11 +23,14 @@
           <label for="optScript">Output Script</label>
           <div class="select-style">
             <select id="optScript">
-          <option value="devanagari" selected>Devanagari</option>
-          <option value="tamil">Tamil</option>
-          <option value="iast">IAST</option>
-        </select>
+              <option value="devanagari" selected>Devanagari</option>
+              <option value="tamil">Tamil</option>
+              <option value="iast">IAST</option>
+            </select>
           </div>
+        </div>
+        <div>
+          <button class="copy-btn" data-clipboard-target="#textOut">Copy Output</button>
         </div>
       </nav>
     </section>
@@ -42,6 +45,7 @@
 
   <script src="../commons/scripts/sanscript.js"></script>
   <script src="../commons/scripts/translit-map.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.7.1/clipboard.min.js"></script>  
   <script src="scripts/script.js"></script>
 </body>
 
